syntax = "proto3";
package pb;
// pacote em que será instalado  de acordo com a linguagem de progração
option go_package = "internal/pb";

message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message blank {}

message CreateCategoryRequest {
  string name = 1;
  string description = 2;
}

message CategoryResponse {
  Category category = 1;
}

message  CategoryList {
  repeated Category categories = 1;
}

message CategoryGetRequest {
  string id = 1;
}
service CategoryService {
  rpc CreateCategory(CreateCategoryRequest) returns (Category) {}
  rpc CreateCategorySteam( stream CreateCategoryRequest) returns (CategoryList) {}
  rpc CreateCategoryBidirectional( stream CreateCategoryRequest) returns (stream Category) {}
  rpc ListCategories(blank) returns (CategoryList) {}
  rpc GetCategory(CategoryGetRequest) returns (Category) {}
}


